[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
resolver = "2"
members = [
  "controller",
  "controller-wait-wake",
  "controller-io",
  "counter",
  "xtask",
]

[workspace.dependencies]
gstd = "1.4.1"
gmeta = "1.4.1"
gear-wasm-builder = "1.4.1"
gtest = "1.4.1"
gclient = "1.4.1"
controller-io.path = "controller-io"
tokio = "1"
xshell = "0.2"
anyhow = "1"
