[package]
name = "controller-wait-wake"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
controller-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
controller-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
